test/kubernetes/e2e/features/endpointslices/testdata/manual-endpointslice.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-manual-endpointslices
  namespace: httpbin
spec:
  hostnames:
  - "www.example.com"
  parentRefs:
  - name: gw
    namespace: default
  rules:
  - matches:
    - path:
        type: Exact
        value: /manual-endpointslices
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /headers
    backendRefs:
    - name: httpbin
      namespace: httpbin
      port: 8080
